manifests/app/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: web
  labels:
    purpose: demo-app
    pod-security.kubernetes.io/enforce: baseline
