manifests/app/90-curl-debug.yaml
apiVersion: v1
kind: Pod
metadata:
  name: curl
  namespace: web
  labels:
    role: client
    app.kubernetes.io/name: curl
spec:
  containers:
    - name: curl
      image: curlimages/curl:8.10.1
      command: ["sleep", "infinity"]
      resources:
        requests: { cpu: 10m, memory: 16Mi }
        limits:   { cpu: 100m, memory: 64Mi }
